# rmui

./: .ci.rosinstall  .travis.yml  README.md  baxter.rosinstall  device.rosinstall.kinetic  device.rosinstall.melodic  fc.rosinstall  kinetic.rosinstall  melodic.rosinstall
rmui/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmui_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmui_demos/apps/: rmui_demos_apps.installed
rmui_demos/apps/baxter_multi_pileup/: baxter_multi_pileup.app  baxter_multi_pileup.l  baxter_multi_pileup.xml
rmui_demos/apps/baxter_multi_rotate_pileup/: baxter_multi_rotate_pileup.app  baxter_multi_rotate_pileup.xml
rmui_demos/apps/baxter_multi_rotate_z180_pileup/: baxter_multi_rotate_z180_pileup.app  baxter_multi_rotate_z180_pileup.interface  baxter_multi_rotate_z180_pileup.l  baxter_multi_rotate_z180_pileup.xml
rmui_demos/apps/baxter_multi_rotate_z90_pileup/: baxter_multi_rotate_z90_pileup.app  baxter_multi_rotate_z90_pileup.l  baxter_multi_rotate_z90_pileup.xml
rmui_demos/apps/baxter_multi_tidyup/: baxter_multi_tidyup.app  baxter_multi_tidyup.l  baxter_multi_tidyup.xml
rmui_demos/apps/baxter_reset/: baxter_reset.app  baxter_reset.l  baxter_reset.xml
rmui_demos/apps/baxter_teach/: baxter_teach.app  baxter_teach.interface  baxter_teach.l  baxter_teach.xml
rmui_demos/launch/baxter/: baxter_display_remote.launch  baxter_local_app_manager.launch  baxter_multi_rmui.launch  baxter_multi_rmui_collabo.launch  baxter_multi_rmui_collabo_dummy.launch  baxter_multi_rmui_dummy.launch  baxter_multi_statenet.launch  baxter_remote_app_manager.launch  baxter_rmui.launch  baxter_rmui_collabo.launch  baxter_rmui_collabo_dummy.launch  baxter_rmui_dummy.launch  baxter_rmui_pddl.launch  baxter_rosbag_record.launch  (+1 more)
rmui_demos/node_scripts/: marker_pose_publisher.py  rmui_pose_publisher.py
rmui_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmui_description/cad_data/: rmui.SLDASM  rmui_molded.SLDASM  rmui_side_board.SLDPRT  rmui_side_board_molded.SLDPRT  rmui_side_board_molded_no_board.SLDPRT  rmui_side_mold_case.SLDPRT  rmui_side_mold_case_bottom.SLDPRT  rmui_side_mold_case_bottom.STL  rmui_side_mold_case_side_left.SLDPRT  rmui_side_mold_case_side_left.STL  rmui_side_mold_case_side_lower.SLDPRT  rmui_side_mold_case_side_lower.STL  rmui_side_mold_case_side_right.SLDPRT  rmui_side_mold_case_side_right.STL  rmui_side_mold_case_side_upper.SLDPRT  rmui_side_mold_case_side_upper.STL  rmui_side_molded.SLDASM  rmui_side_molded_parts.SLDASM  rmui_top_board.SLDPRT  rmui_top_board_molded.SLDPRT  rmui_top_board_molded_no_board.SLDPRT  rmui_top_mold_case.SLDPRT  rmui_top_mold_case_bottom.SLDPRT  rmui_top_mold_case_bottom.STL  rmui_top_mold_case_side.SLDPRT  rmui_top_mold_case_side.STL  rmui_top_molded.SLDASM  rmui_top_molded_parts.SLDASM
rmui_description/urdf/: rmui.urdf  rmui0.urdf  rmui1.urdf  rmui2.urdf
rmui_drivers/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rmui_drivers/config/: robot_localization.yaml
rmui_drivers/launch/: dummy_rmui.launch  mtc2.launch  pr2_rmui.launch  pr2_rmui_dummy.launch  rmui.launch  rmui0.launch  rmui0_dummy.launch  rmui0_local.launch  rmui1.launch  rmui1_dummy.launch  rmui1_local.launch  rmui2.launch  rmui2_dummy.launch  rmui2_local.launch  rmui_base.launch  rmui_dummy.launch  rmui_local.launch
rmui_drivers/node_scripts/: bno055_node.py  dummy_rmui_node.py  pca9547_node.py  rmui_node.py  rmui_server.py  vcnl4040_multiplexa_node.py  vcnl4040_node.py  ws281x_node.py
rmui_drivers/resource/: contact_button_layout.yaml  imu_button_layout.yaml  multi_rmui_tabbed_layout.yaml  rmui0_to_rmui1_dummy_tabbed_layout.yaml  rmui0_to_rmui1_tabbed_layout.yaml  rmui0_to_rmui2_dummy_tabbed_layout.yaml  rmui0_to_rmui2_tabbed_layout.yaml  rmui1_to_rmui2_dummy_tabbed_layout.yaml  rmui1_to_rmui2_tabbed_layout.yaml  rmui_tabbed_layout.yaml  rotate_button_layout.yaml  rqt_contact_buttons.perspective  rqt_contact_sensor_buttons.perspective  rqt_imu_buttons.perspective  rqt_rotate_buttons.perspective
rmui_drivers/rvizconfig/: multi_rmui.rviz  rmui.rviz  rmui0.rviz  rmui1.rviz  rmui2.rviz
rmui_drivers/sample/: rmui0.launch  rmui1.launch  rmui2.launch  rmui2_local.launch
rmui_drivers/scripts/: env-loader.sh  shutdownd.py  simple_beep.py  simple_bno055.py  simple_mpl115a2.py  simple_ws281x.py
rmui_drivers/systemd/: shutdownd.service
rmui_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmui_msgs/action/: ExecuteStatenet.action
rmui_msgs/msg/: ImuCalibStatus.msg  LED.msg  StatenetStateStamped.msg
rmuieus/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmuieus/config/: one_ctb.l  x_aligned_three_jetsons.l  x_aligned_two_jetsons.l  y_aligned_three_jetsons.l  y_aligned_two_jetsons.l
rmuieus/euslisp/: baxter-dualarm-motions.l  baxter-execute-statenet.l  baxter-rmui-main.l  baxter-rmui-planning.l  baxter-solve-pddl.l  baxter-statenet-server.l  baxter-statenet.l  baxter-task-training.l  baxter-trained-execute.l  pr2-dualarm-motions.l  pr2-execute-statenet.l  pr2-motion-planner.l  pr2-motions.l  pr2-planners.l  pr2-rmui-main.l  pr2-rmui-planning.l  pr2-scene.l  pr2-solve-dualarm-liftup.l  pr2-solve-pddl.l  pr2-statenet-server.l  pr2-statenet.l  pr2-task-training.l  pr2-trained-execute.l  prx-utils.l  rmui-main.l  rmui-planners.l
rmuieus/launch/: baxter_multi_rmui_planning.launch  baxter_multi_rmui_statenet_server.launch  baxter_rmui_pddl.launch  baxter_rmui_planning.launch  baxter_rmui_statenet.launch  baxter_rmui_statenet_server.launch  baxter_rmui_task_training.launch  baxter_rmui_trained_execute.launch  multi_rmui_planning.launch  multi_rmui_statenet_server.launch  pr2_multi_rmui_planning.launch  pr2_rmui_multi_statenet_server.launch  pr2_rmui_pddl.launch  pr2_rmui_planning.launch  pr2_rmui_statenet.launch  pr2_rmui_statenet_server.launch  pr2_rmui_task_training.launch  pr2_rmui_trained_execute.launch  rmui_pddl.launch  rmui_planning.launch  rmui_statenet.launch  rmui_statenet_server.launch  rmui_task_training.launch  rmui_trained_execute.launch
rmuieus/resource/: rqt_ez_publisher.yaml
rmuieus/training_data/: .gitignore
(+179 files in other folders)
