<?xml version="1.0"?>
<package format="1">
  <name>rmui</name>
  <version>2.3.1</version>
  <description>The meta package for Robot Manipulation User Interface</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <license>BSD</license>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rmui_demos</run_depend>
  <run_depend>rmui_description</run_depend>
  <run_depend>rmui_drivers</run_depend>
  <run_depend>rmui_msgs</run_depend>
  <run_depend>rmuieus</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
