<?xml version="1.0"?>
<package format="1">
  <name>rmui_drivers</name>
  <version>0.0.0</version>
  <description>The Robot Manipulation User Interface driver package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <license>BSD</license>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
