<?xml version="1.0"?>
<package format="1">
  <name>rmui_drivers</name>
  <version>0.0.0</version>
  <description>The Robot Manipulation User Interface driver package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <license>BSD</license>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>force_proximity_ros</run_depend>
  <run_depend>python-smbus</run_depend>
  <run_depend>rmui_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
