<?xml version="1.0"?>
<package format="1">
  <name>rmui_msgs</name>
  <version>0.0.0</version>
  <description>The Robot Manipulation User Interface msg package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <license>BSD</license>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
