<?xml version="1.0"?>
<package format="2">
  <name>rmuieus</name>
  <version>1.0.3</version>
  <description>The Robot Manipulation User Interface program package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <license>BSD</license>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rmui_msgs</build_depend>

  <exec_depend>ffha</exec_depend>
  <exec_depend>pddl_planner</exec_depend>
  <exec_depend>rmui_drivers</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
